--- a/UIThirdLecture/UIThirdLecture/Base.lproj/Main.storyboard
+++ b/UIThirdLecture/UIThirdLecture/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="112" y="-37"/>
+            <point key="canvasLocation" x="110.68702290076335" y="-37.323943661971832"/>
         </scene>
     </scenes>
     <resources>
